--- a/templates/assets/sass/_sidebar.scss
+++ b/templates/assets/sass/_sidebar.scss
@@ -10,7 +10,6 @@ $sidebar-side-padding: 20px !default;
     flex:0 0 200px;
     background-color:$primary-bg-color;
     border-right:1px solid $primary-bg-border-color;
-    height:100%;
     padding-top:30px;
 }
 
